[gd_scene load_steps=2 format=3 uid="uid://3usm60dc4lwk"]

[ext_resource type="Script" path="res://scripts/game_over_scene.gd" id="2_script"]

[node name="GameOverScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_script")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="BackgroundImage" type="TextureRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 5

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="UIContainer" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="UILayer/UIContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="UILayer/UIContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -50.0
offset_right = 250.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="SavedNestsLabel" type="Label" parent="UILayer/UIContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 32
text = "Saved 0 Nests"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="UILayer/UIContainer/StatsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RestartButton" type="Button" parent="UILayer/UIContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 120.0
offset_right = 100.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Restart"

[node name="AudioController" type="Node" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="AudioController"]
